rebase search to use data from database
